--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 <body>
 
+<!-- you don't need 3 columns but 3 "buttons" and clicking on them you load the text in one paragraph, on single column -->
+
 <header>
 	<div class="row bg_bianco">
 		<div class="no"></div>
@@ -31,6 +33,8 @@
 	Maybe the latter idea came to me from basketball, a game I have played from the age of 6. I am now working as a coach at a club in London, an inclusive project where we can all learn from each other.
 	<br><br>
 	I am also into music, film and photography, and I studied studio composition while working as video editor and studio manager in my home town Milano and in London, where I have been living for over ten years.
+	<!--<br><br>
+	I am a basketball coach at a London club, having played the game from the age of 6. It is an inclusive project where we all can learn from each other.-->
 	</p>
 </div>
 
@@ -52,6 +56,8 @@
 	<br><br>
 	Think about the idea behind Creative Commons. One of the licenses states: "you are free to adapt, remix, transform, and build upon the material (...)
 	</p>
+
+
 </div>
 
 <div class="row">
@@ -62,42 +68,53 @@
 	<br><br>
 	A mind can be a node, and the strings *itter or *ode can trigger connections in my mind that don't exist elsewhere, until I share them by talking to someone, writing a document or publishing a web page.	
 	</p>
-	
 	<p class="w33 bg_giallo">
 	My idea of <i class="monospace">ciclomedia</i> refers to our experience of the information world, continuously moving between different sources, devices, and languages (verbal, non-verbal and programming ones), while being modified in the process. This was clearly possible before the internet was created, but expanded since we could access the net, and "exploded", or accelerated reaching new speeds and forms, when we started to use "smart" phones and other portable devices which are (almost) always with us.
 	</p>
 </div>
 
+
+
 <div class="row">
 	<div class="col">
-		<p class="bg_sg txt_c giallo" id="a0">Nodes<br><!--[rearrange]--></p>
+		<p class="bg_sg giallo txt_c">Nodes<br>[shuffle]</p>
+		<span class="arrow-down" id="a0"></span>
 		<p class="bg_bianco txt_c" id="a1">Languages<br><br></p>
-		<p class="bg_bianco txt_c" id="a2">Media<br><br></p>
+		<p class="bg_bianco arancio txt_c" id="a2">Media<br><br></p>
 		<p class="bg_bianco txt_c" id="a3">Learning<br><br></p>
-		<p class="bg_bianco txt_c" id="a4">Change in<br>response</p>
+		<p class="bg_bianco arancio txt_c" id="a4">Change in<br>response</p>
 		<p class="bg_bianco txt_c" id="a5">Mutuality<br><br></p>
-		<p class="bg_bianco txt_c" id="a6">Places<br><br></p>
+		<p class="bg_bianco arancio txt_c" id="a6">Places<br><br></p>
 	</div>
 	<div class="col">
-		<p class="bg_sg txt_c giallo" id="b0">Cycles<br><!--[rearrange]--></p>
+		<p class="bg_sg giallo txt_c">Cycles<br>[shuffle]</p>
+		<span class="arrow-down" id="b0"></span>
 		<p class="bg_bianco txt_c" id="b1">Reading/<br>Writing</p>
-		<p class="bg_bianco txt_c" id="b2">Study/<br>Work</p>
+		<p class="bg_bianco arancio txt_c" id="b2">Study/<br>Work</p>
 		<p class="bg_bianco txt_c" id="b3">Learning/<br>Teaching</p>
-		<p class="bg_bianco txt_c" id="b4">Playing/<br>Coaching</p>
+		<p class="bg_bianco arancio txt_c" id="b4">Playing/<br>Coaching</p>
 		<p class="bg_bianco txt_c" id="b5">"User"/<br>"Author"</p>
-		<p class="bg_bianco txt_c" id="b6">Contact/<br>Distance</p>
+		<p class="bg_bianco arancio txt_c" id="b6">Contact/<br>Distance</p>
 	</div>
 	<div class="col">
-		<p class="bg_sg txt_c giallo" id="b0">Connections<br><!--[rearrange]--></p>
+		<p class="bg_sg giallo txt_c">Connections<br>[shuffle]</p>
+		<span class="arrow-down" id="c0"></span>
 		<p class="bg_bianco txt_c" id="c1">Network<br><br></p>
-		<p class="bg_bianco txt_c" id="c2">Languages<br>+ code</p>
+		<p class="bg_bianco arancio txt_c" id="c2">Languages<br>+ code</p>
 		<p class="bg_bianco txt_c" id="c3">Sound +<br>image</p>
-		<p class="bg_bianco txt_c" id="c4">Body +<br>devices</p>
+		<p class="bg_bianco arancio txt_c" id="c4">Body +<br>devices</p>
 		<p class="bg_bianco txt_c" id="c5">People<br><br></p>
-		<p class="bg_bianco txt_c" id="c6">Transport<br><br></p>
+		<p class="bg_bianco arancio txt_c" id="c6">Transport<br><br></p>
 	</div>
 </div>
 
+<div class="row"><span class="arrow-up" id="abc"></span></div>
+
+<div class="row">
+	<p class="w75 bg_bianco txt_c">
+	[shuffle all building blocks to find new combinations]
+	</p>
+</div>
 
 <div class="row">
 	<p class="w75 bg_dsg monospace giallo txt_c">
@@ -145,7 +162,12 @@
 </div>
 
 <div class="row">
-		<p class="w40 bg_bianco monospace">
+		<p class="w25 bg_bianco monospace">
+		<b>milano by music</b>
+		<br>keywords: places, music, memories, composition
+		<br><a class="A2n" href="https://volchestra.bandcamp.com/album/0-1" title="Volchestra">Link</a>
+		</p>
+		<p class="w33 bg_bianco monospace">
 		<b>london by video and field recordings</b>
 		<br>keywords: places, transport, video, time, imageo, audiovisual forms
 		<br><a class="A2n" href="http://www.fotonix.it/video/iar_v0_4m.mp4" title="In A Room video">Link</a>
@@ -153,11 +175,15 @@
 </div>
 
 <div class="row">
-		<p class="w25 bg_bianco monospace">
-		<b>milano by music</b>
-		<br>keywords: places, music, memories, composition
-		<br><a class="A2n" href="https://volchestra.bandcamp.com/album/0-1" title="Volchestra">Link</a>
+
+		<p class="w40 bg_bianco monospace">
+		<b>Lavori LCD</b>
+		<br>keywords: visual programming, animation, real time, time, music, audiovisual forms
+		<br><a class="A2n" href="https://kinolag.github.io/imc/" title="	LCD Works">Link</a>
 		</p>
+</div>
+<!--
+<div class="row">
 		<p class="w30 bg_bianco monospace">
 		<b>milano by photo and text</b>
 		<br>keywords: places, photography, text, imageo
@@ -165,15 +191,7 @@
 		</p>
 </div>
 
-<div class="row">
-		<p class="w40 bg_bianco monospace">
-		<b>Lavori LCD</b>
-		<br>keywords: visual programming, animation, real time, time, music, audiovisual forms
-		<br><a class="A2n" href="https://kinolag.github.io/imc/" title="	LCD Works">Link</a>
-		</p>
-</div>
 
-<!--
 <div class="row">
 		<p class="w35 bg_bianco monospace">
 		<b>strings: B*ckn*ll</b>
@@ -211,6 +229,8 @@
 </div>
 
 <div class="row">
+	<!-- understand how this is used: will it be stretchable in flex container ? no -->
+	<!-- maybe if I don't specify a fixed width and height -->
 
 	<svg height="170"> 
 		<circle cx="150" cy="54" r="16" /><!-- cy 18 sarebbe a filo (r16 + 2 di bordo -->
@@ -228,8 +248,21 @@
 
 </main>
 
+<!-- footer sembra non prendere ne' a capo ne' div su righe multiple, solo con list posos mandare a capo elementi. forse e' solo inline -->
+
 <!-- JS CODE in external file -->
 <script src="ncc.js"></script>
 
 </body>
 </html>
+
+<!-- SVG notes
+basic use without viewbox (if used, would need to resize svg height, circle r, etc.)
+svg viewBox="0 0 340 340" xmlns="http://www.w3.org/2000/svg"
+
+animation with 50% rotation on infinite loops would give back and forth effect
+100% gives the whole loop
+easy easy gives smooth start and stop
+height determines circle to get out of the viewport
+
+ -->
