--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 
 <body>
 
-<!-- you don't need 3 columns but 3 "buttons" and clicking on them you load the text in one paragraph, on single column -->
-
 <header>
 	<div class="row bg_bianco">
 		<div class="no"></div>
@@ -135,12 +133,12 @@
 		<p class="w30 bg_bianco monospace">
 		<b>music album</b> (additional production and web idea)
 		<br>keywords: hypertext album, music, remote collaboration
-		<br><a class="A2n" href="javascript:var remote=window.open('http://www.studionotte.it/lp_01.html','mix','width=800,height=750,toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbar=no,resizeable=no');" " title="hypertext album">Link</a>
+		<br><a class="A2n" href="javascript:var remote=window.open('http://www.studionotte.it/lp_01.html','mix','width=800,height=750,toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbar=no,resizeable=no');" title="hypertext album">Link</a>
 		</p>
 		<p class="w33 bg_bianco monospace">
 		<b>music mix</b>
 		<br>keywords: music, change in response, "user"/"author"
-		<br><a class="A2n" href="javascript:var remote=window.open('http://www.fotonix.it/mix_050215.html','mix','width=800,height=750,toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbar=no,resizeable=no');" title="">Link</a>
+		<br><a class="A2n" href="javascript:var remote=window.open('http://www.fotonix.it/mix_050215.html','mix','width=800,height=750,toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbar=no,resizeable=no');" title="music mix">Link</a>
 		</p>
 </div>
 
@@ -171,7 +169,6 @@
 </div>
 
 <div class="row">
-
 		<p class="w40 bg_bianco monospace">
 		<b>Lavori LCD</b>
 		<br>keywords: visual programming, animation, real time, time, music, audiovisual forms
@@ -225,15 +222,10 @@
 </div>
 
 <div class="row">
-
 	<svg height="170"> 
 		<circle cx="150" cy="54" r="16" /><!-- cy 18 sarebbe a filo (r16 + 2 di bordo -->
 		It looks like your browser does not support inline SVG.  
-	</svg> 
-	<!-- <svg height="340"> 
-		<circle cx="120" cy="120" r="16" />
-		It looks like your browser does not support inline SVG.  
-	</svg> -->
+	</svg>
 </div>
 
 <div class="row">
