--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 	<br><br>
 	Think about the idea behind Creative Commons. One of the licenses states: "you are free to adapt, remix, transform, and build upon the material (...)
 	</p>
+
+
 </div>
 
 <div class="row">
@@ -62,7 +64,7 @@
 	<br><br>
 	A mind can be a node, and the strings *itter or *ode can trigger connections in my mind that don't exist elsewhere, until I share them by talking to someone, writing a document or publishing a web page.	
 	</p>
-	<p class="w33 bg_giallo">
+	<p class="w33 bg_arancio">
 	My idea of <i class="monospace">ciclomedia</i> refers to our experience of the information world, continuously moving between different sources, devices, and languages (verbal, non-verbal and programming ones), while being modified in the process. This was clearly possible before the internet was created, but expanded since we could access the net, and "exploded", or accelerated reaching new speeds and forms, when we started to use "smart" phones and other portable devices which are (almost) always with us.
 	</p>
 </div>
@@ -71,8 +73,8 @@
 
 <div class="row">
 	<div class="col">
-		<p class="bg_sg giallo txt_c">Nodes<br>[shuffle]</p>
-		<span class="arrow-down" id="a0"></span>
+		<p class="bg_sg giallo txt_c spazio">Nodes<br>[shuffle]</p>
+		<br><span class="arrow-down" id="a0"></span>
 		<p class="bg_bianco txt_c" id="a1">Languages<br><br></p>
 		<p class="bg_bianco arancio txt_c" id="a2">Media<br><br></p>
 		<p class="bg_bianco txt_c" id="a3">Learning<br><br></p>
@@ -81,8 +83,8 @@
 		<p class="bg_bianco arancio txt_c" id="a6">Places<br><br></p>
 	</div>
 	<div class="col">
-		<p class="bg_sg giallo txt_c">Cycles<br>[shuffle]</p>
-		<span class="arrow-down" id="b0"></span>
+		<p class="bg_sg giallo txt_c spazio">Cycles<br>[shuffle]</p>
+		<br><span class="arrow-down" id="b0"></span>
 		<p class="bg_bianco txt_c" id="b1">Reading/<br>Writing</p>
 		<p class="bg_bianco arancio txt_c" id="b2">Study/<br>Work</p>
 		<p class="bg_bianco txt_c" id="b3">Learning/<br>Teaching</p>
@@ -91,8 +93,8 @@
 		<p class="bg_bianco arancio txt_c" id="b6">Contact/<br>Distance</p>
 	</div>
 	<div class="col">
-		<p class="bg_sg giallo txt_c">Connections<br>[shuffle]</p>
-		<span class="arrow-down" id="c0"></span>
+		<p class="bg_sg giallo txt_c spazio">Connections<br>[shuffle]</p>
+		<br><span class="arrow-down" id="c0"></span>
 		<p class="bg_bianco txt_c" id="c1">Network<br><br></p>
 		<p class="bg_bianco arancio txt_c" id="c2">Languages<br>+ code</p>
 		<p class="bg_bianco txt_c" id="c3">Sound +<br>image</p>
@@ -105,7 +107,7 @@
 <div class="row"><span class="arrow-up" id="abc"></span></div>
 
 <div class="row">
-	<p class="w75 bg_bianco txt_c">
+	<p class="w60 bg_bianco txt_c">
 	[shuffle all building blocks to find new combinations]
 	</p>
 </div>
@@ -169,6 +171,7 @@
 </div>
 
 <div class="row">
+
 		<p class="w40 bg_bianco monospace">
 		<b>Lavori LCD</b>
 		<br>keywords: visual programming, animation, real time, time, music, audiovisual forms
@@ -183,19 +186,8 @@
 		<br><a class="A2n" href="" title="">Link</a>
 		</p>
 </div>
-
-
-<div class="row">
-		<p class="w35 bg_bianco monospace">
-		<b>strings: B*ckn*ll</b>
-		<br>keywords: text, programming, music, basketball
-		</p>
-		<p class="w25 bg_bianco monospace">
-		<b>strings: *itter</b>
-		<br>keywords: text, languages, programming, community
-		</p>
-</div>
 -->
+
 <div class="row">
 	<p class="w75 bg_bianco">
 	I have been interested in the web for a long time, building static websites on my own but after working as web producer at a younger age, I have only done it in my spare time as I worked in post-production and studio workflows for the last 15 years. The websites linked above contain mostly basic CSS and old style table-based layouts (however some of them adaptive), but the bits of JavaScript I integrated into some of the pages were written by other people and used to solve specific problems.
@@ -212,7 +204,7 @@
 
 <div class="row">
 	<p class="w50 bg_dsg txt_c monospace giallo">
-		Links
+		Coding links
 		<br><br><a href="https://kinolag.github.io/imc/" class="A3n" title="image carousel">imc on github</a>
 		<br><br><a href="https://www.freecodecamp.org/tekami" class="A3n" title="tekami on freecodecamp">freecodecamp</a>
 		<br><br><a href="https://www.codecademy.com/tekami" class="A3n" title="tekami on codecademy">codecademy</a>
@@ -225,7 +217,7 @@
 	<svg height="170"> 
 		<circle cx="150" cy="54" r="16" /><!-- cy 18 sarebbe a filo (r16 + 2 di bordo -->
 		It looks like your browser does not support inline SVG.  
-	</svg>
+	</svg> 
 </div>
 
 <div class="row">
