--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 		<p class="w25 bg_bianco monospace">
 		<b>berlin by sound</b>
 		<br>keywords: places, transport, soundscape, connections
-		<br><a class="A2n" href="http://www.fotonix.it/temp/b_soundscape_5+1_stereomix.mp3" title="Berlin soundscape">Link</a>
+		<br><a class="A2n" href="http://www.fotonix.it/b_soundscape.html" title="Berlin soundscape">Link</a>
 		</p>
 </div>
 
