--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	Those in the table below can be seen as some useful concepts for project ideas, or building blocks.
 	</p>
 
-	<p class="w40">
+	<p class="w40 bg_azzurro">
 	As opposed to having one role for most of our life, or a fixed job title which we are identified for, our experience becomes more and more fluid, our knowledge the result of <i class="monospace"></i>cycles</i> between different or opposite states. 
 	<br><br>
 	If we want to write code, we first have to study other people's code. If we make music with samples we first have to listen and process sounds either we or other people recorded. Someone approaches a problem, writes a function that did not exist, or introduces a new tag in a new version of a language, and from that moment other people will be able to use one line of code instead of writing a few. 
@@ -57,7 +57,7 @@
 </div>
 
 <div class="row">
-	<p class="w40">
+	<p class="w40 bg_azzurro">
 	We are now potentially always connected to the net, to the people we know, and also those we don't know... yet.
 	<br><br>
 	<i class="monospace">Connections</i> happen and develop all the time between different people, areas, topics, phenomena. Talking or chatting to someone by phone or travelling between two cities are simple examples, but working with sound and image is another one, and variables can establish connections too. These happen between nodes, or through nodes. 
