--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <div class="row">
 	<div class="col">
 		<p class="bg_sg giallo txt_c spazio">Nodes<br>[shuffle]</p>
-		<br><span class="arrow-down" id="a0"></span>
+		<br><a class="arrow-down" id="a0" href="javascript:void(0)" title="shuffle nodes"></a>
 		<p class="bg_bianco txt_c" id="a1">Languages<br><br></p>
 		<p class="bg_bianco arancio txt_c" id="a2">Media<br><br></p>
 		<p class="bg_bianco txt_c" id="a3">Learning<br><br></p>
@@ -84,7 +84,7 @@
 	</div>
 	<div class="col">
 		<p class="bg_sg giallo txt_c spazio">Cycles<br>[shuffle]</p>
-		<br><span class="arrow-down" id="b0"></span>
+		<br><a class="arrow-down" id="b0" href="javascript:void(0)" title="shuffle cycles"></a>
 		<p class="bg_bianco txt_c" id="b1">Reading/<br>Writing</p>
 		<p class="bg_bianco arancio txt_c" id="b2">Study/<br>Work</p>
 		<p class="bg_bianco txt_c" id="b3">Learning/<br>Teaching</p>
@@ -94,7 +94,7 @@
 	</div>
 	<div class="col">
 		<p class="bg_sg giallo txt_c spazio">Connections<br>[shuffle]</p>
-		<br><span class="arrow-down" id="c0"></span>
+		<br><a class="arrow-down" id="c0" href="javascript:void(0)" title="shuffle connections"></a>
 		<p class="bg_bianco txt_c" id="c1">Network<br><br></p>
 		<p class="bg_bianco arancio txt_c" id="c2">Languages<br>+ code</p>
 		<p class="bg_bianco txt_c" id="c3">Sound +<br>image</p>
@@ -104,7 +104,7 @@
 	</div>
 </div>
 
-<div class="row"><span class="arrow-up" id="abc"></span></div>
+<div class="row"><a class="arrow-up" id="abc" href="javascript:void(0)" title="shuffle all"></a></div>
 
 <div class="row">
 	<p class="w60 bg_bianco txt_c">
