--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html> 
-<html lang="english">
+<html lang="en">
 <!-- Nodi Cicli Connessioni -->
 <!-- Mente Macchina Società -->
 <head>
     <title>ncc</title>
     <meta charset='utf-8' />
-    <meta name='viewport' content='wid=th=device-wid=th, initial-scale = 1.0' />
+    <meta name='viewport' content='width=device-width, initial-scale = 1.0' />
 	<link rel="stylesheet" href="ncc.css" type="text/css">
 	<link rel="shortcut icon" href="img/xq_64x64_g6.ico">
 </head>
@@ -44,7 +44,7 @@
 	</p>
 
 	<p class="w40 bg_azzurro">
-	As opposed to having one role for most of our life, or a fixed job title which we are identified for, our experience becomes more and more fluid, our knowledge the result of <i class="monospace"></i>cycles</i> between different or opposite states. 
+	As opposed to having one role for most of our life, or a fixed job title which we are identified for, our experience becomes more and more fluid, our knowledge the result of <i class="monospace">cycles</i> between different or opposite states. 
 	<br><br>
 	If we want to write code, we first have to study other people's code. If we make music with samples we first have to listen and process sounds either we or other people recorded. Someone approaches a problem, writes a function that did not exist, or introduces a new tag in a new version of a language, and from that moment other people will be able to use one line of code instead of writing a few. 
 	<br><br>
@@ -216,13 +216,12 @@
 
 <div class="row">
 	<svg height="170"> 
-		<circle cx="150" cy="54" r="16" /><!-- cy 18 sarebbe a filo (r16 + 2 di bordo -->
-		It looks like your browser does not support inline SVG.  
+		<circle cx="150" cy="54" r="16" /><!-- cy 18 sarebbe a filo (r16 + 2 di bordo) -->
 	</svg> 
 </div>
 
 <div class="row">
-<img src="https://www.codewars.com/users/tekami/badges/large" width="324" vspace="0" alt="codewars image and rank">
+    <img src="https://www.codewars.com/users/tekami/badges/large" width="324" alt="codewars image and rank">
 </div>
 
 </main>
